--- a/src/less/light.less
+++ b/src/less/light.less
@@ -1,5 +1,5 @@
 body {
-	background: url('../img/bg.png') repeat 0 0 scroll white;
+	background: url('../img/light_bg.png') repeat 0 0 scroll white;
 	text-align: center;
 }
 
