--- a/src/css/app.css
+++ b/src/css/app.css
@@ -45,6 +45,15 @@ section {
 }
 .site a span { display: block; }
 
+.title {
+	margin: -10px 0 0;
+	font-size: 52px;
+	display: block;
+	line-height: 60px;
+	border-top: 10px solid #FFF;
+	border-bottom: 10px solid #FFF;
+}
+
 .summary a {
 	color: #C73E3A;
 	text-decoration: none;
