Adopt new style

--- a/src/components/Currency.astro
+++ b/src/components/Currency.astro
@@ -5,16 +5,11 @@ const url = `https://frankfurter.app/latest?base=${baseCurrency}&symbols=${targe
 
 const response = await fetch(url);
 const data = await response.json();
----
-<div class="font-normal">
-  {Object.keys(data.rates).map(currency => {
-    if (currency === 'JPY') {
-      return <p>£1 buys {data.rates[currency]}円</p>
-    };
-    if (currency === 'USD') {
-      return <p>£1 buys ${data.rates[currency]}</p>
-    };
 
-    return null;
-  })}
+const jpyRate = data.rates['JPY'].toFixed(2);
+const usdRate = data.rates['USD'].toFixed(5);
+---
+<div class="font-normal text-center">
+  <p>£1 = {jpyRate}円</p>
+  <p>£1 = ${usdRate}</p>
 </div>
