--- a/src/components/Time.astro
+++ b/src/components/Time.astro
@@ -1,7 +1,7 @@
 <astro-time>
   <p id="day"  class="font-normal" />
-  <p id="date" class="text-4xl font-normal" />
-  <p id="time" class="text-3xl" />
+  <p id="date" class="text-6xl font-normal" />
+  <p id="time" class="text-5xl text-center" />
 </astro-time>
 
 <script>
@@ -9,24 +9,23 @@
   import { ja } from 'date-fns/locale';
 
   const formatDate = (date: Date) => format(date, 'doMMMMyyyy', {locale: ja});
-  const formatDay = (date: Date) => format(date, 'eeee', {locale: ja});
+  const formatDay = (date: Date) => {
+    const jpDayName = format(date, 'eeee', {locale: ja});
+    const enDayName = format(date, 'eeee');
+    return `${jpDayName} <span class="text-base">${enDayName}</span>`;
+  };
   const formatTime = (date: Date) => format(date, 'kk:mm:ss', {locale: ja});
 
   class AstroTime extends HTMLElement {
     constructor() {
       super()
-
-      const date = new Date();
-      this.querySelector('p#date').innerHTML = formatDate(date);
-      this.querySelector('p#day').innerHTML = formatDay(date);
-      this.querySelector('p#time').innerHTML = formatTime(date);
     }
 
     timer() {
       let now = new Date();
-      document.querySelector('p#date').innerHTML = formatDate(now);
-      document.querySelector('p#day').innerHTML = formatDay(now);
-      document.querySelector('p#time').innerHTML = formatTime(now);
+      (document.querySelector('p#date') as HTMLElement).innerHTML = formatDate(now);
+      (document.querySelector('p#day') as HTMLElement).innerHTML = formatDay(now);
+      (document.querySelector('p#time') as HTMLElement).innerHTML = formatTime(now);
     }
 
     interval = setInterval(this.timer, 1000);
