--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
-import Time from "../components/Time.astro";
-import Separator from "../components/Separator.astro";
 import Currency from "../components/Currency.astro";
+import Separator from "../components/Separator.astro";
+import Time from "../components/Time.astro";
 ---
 <Layout title="START">
-	<div class="min-h-screen h-full flex items-center justify-center bg-no-repeat bg-cover" style={{backgroundImage: 'url(/2641048.gif)'}}>
-		<main class="mx-auto p-8 bg-blue-200 bg-opacity-50 rounded-lg border-2 border-blue-300 border-opacity-100 shadow-2xl text-gray-900 text-center text-xl font-light transition duration-500 ease-in-out transform hover:scale-110">
-			<Time />
-			<Separator />
-			<Currency />
-		</main>
+	<div class="min-h-screen h-full w-full flex flex-col items-center justify-center text-2xl text-black bg-[#fde653]">
+		<Time />
+		<Separator />
+		<img src="/optimised.gif" class="max-w-6xl w-full" />
+		<Separator />
+		<Currency />
 	</div>
 </Layout>
