And update to new standards

--- a/src/components/Time.astro
+++ b/src/components/Time.astro
@@ -1,31 +1,34 @@
 <astro-time>
-  <p id="day"  class="font-normal" />
-  <p id="date" class="text-6xl font-normal" />
-  <p id="time" class="text-5xl text-center" />
+  <p id="day" class="font-normal"></p>
+  <p id="date" class="text-6xl font-normal"></p>
+  <p id="time" class="text-5xl text-center"></p>
 </astro-time>
 
 <script>
-  import { format } from 'date-fns';
-  import { ja } from 'date-fns/locale';
+  import { format } from "date-fns";
+  import { ja } from "date-fns/locale";
 
-  const formatDate = (date: Date) => format(date, 'doMMMMyyyy', {locale: ja});
+  const formatDate = (date: Date) => format(date, "doMMMMyyyy", { locale: ja });
   const formatDay = (date: Date) => {
-    const jpDayName = format(date, 'eeee', {locale: ja});
-    const enDayName = format(date, 'eeee');
+    const jpDayName = format(date, "eeee", { locale: ja });
+    const enDayName = format(date, "eeee");
     return `${jpDayName} <span class="text-base">${enDayName}</span>`;
   };
-  const formatTime = (date: Date) => format(date, 'kk:mm:ss', {locale: ja});
+  const formatTime = (date: Date) => format(date, "kk:mm:ss", { locale: ja });
 
   class AstroTime extends HTMLElement {
     constructor() {
-      super()
+      super();
     }
 
     timer() {
       let now = new Date();
-      (document.querySelector('p#date') as HTMLElement).innerHTML = formatDate(now);
-      (document.querySelector('p#day') as HTMLElement).innerHTML = formatDay(now);
-      (document.querySelector('p#time') as HTMLElement).innerHTML = formatTime(now);
+      (document.querySelector("p#date") as HTMLElement).innerHTML =
+        formatDate(now);
+      (document.querySelector("p#day") as HTMLElement).innerHTML =
+        formatDay(now);
+      (document.querySelector("p#time") as HTMLElement).innerHTML =
+        formatTime(now);
     }
 
     interval = setInterval(this.timer, 1000);
@@ -40,5 +43,5 @@
     }
   }
 
-  customElements.define('astro-time', AstroTime);
+  customElements.define("astro-time", AstroTime);
 </script>
