--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 
 import Currency from "../components/Currency.astro";
 import Separator from "../components/Separator.astro";
 import Time from "../components/Time.astro";
 ---
+
 <Layout title="START">
-	<div class="min-h-screen h-full w-full flex flex-col items-center justify-center text-2xl text-black bg-[#fde653]">
-		<Time />
-		<Separator />
-		<img src="/optimised.gif" class="max-w-6xl w-full" />
-		<Separator />
-		<Currency />
-	</div>
+  <div
+    class="min-h-screen h-full w-full flex flex-col items-center justify-center text-2xl text-black bg-[#fde653]"
+  >
+    <Time />
+    <Separator />
+    <img src="/optimised.gif" class="max-w-6xl w-full" />
+    <Separator />
+    <Currency />
+  </div>
 </Layout>
