--- a/src/components/Currency.astro
+++ b/src/components/Currency.astro
@@ -1,14 +1,15 @@
 ---
-const baseCurrency = 'GBP';
-const targetCurrency = 'USD,JPY';
+const baseCurrency = "GBP";
+const targetCurrency = "USD,JPY";
 const url = `https://frankfurter.app/latest?base=${baseCurrency}&symbols=${targetCurrency}`;
 
 const response = await fetch(url);
 const data = await response.json();
 
-const jpyRate = data.rates['JPY'].toFixed(2);
-const usdRate = data.rates['USD'].toFixed(5);
+const jpyRate = data.rates["JPY"].toFixed(2);
+const usdRate = data.rates["USD"].toFixed(5);
 ---
+
 <div class="font-normal text-center">
   <p>£1 = {jpyRate}円</p>
   <p>£1 = ${usdRate}</p>
